--- a/style.css
+++ b/style.css
@@ -10,6 +10,15 @@ body{
     background-position: center;
     height: 100vh;
 }
+
+#timer{
+    font-size: 30px;
+    font-weight: bolder;
+}
+
+h1{
+    text-shadow: 2px 2px 5px rgb(93, 84, 84);
+}
 div{
     padding: 20px;
 }
@@ -31,3 +40,8 @@ button{
     font-weight: bold;
     box-shadow: 5px 5px 5px black;
 }
+
+@keyframes blinking {
+    0%, 100% { opacity: 1; }
+    50% { opacity: 0; }
+  }
